cleaning up a bit